--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lodash": "~3.8.0",
     "ncp": "~2.0.0",
     "q": "~1.3.0",
+    "rimraf": "^2.4.0",
     "select2": "~3.5.2-browserify",
     "stream": "~0.0.2",
     "terminal.js": "~1.0.5"
