--- a/app/addons/nodejs/config.json
+++ b/app/addons/nodejs/config.json
@@ -5,8 +5,8 @@
   "priority": 5,
   "modules": [],
   "data": {
-    "nodejs": false,
-    "nodejs_options": {
+    "install": false,
+    "options": {
       "version": "0.12.4",
       "npm": ["bower", "gulp"]
     }
