--- a/app/addons/packages/config.json
+++ b/app/addons/packages/config.json
@@ -3,5 +3,8 @@
   "title": "Packages",
   "type": "System",
   "priority": 5,
-  "modules": []
+  "modules": [],
+  "data": {
+    "packages": []
+  }
 }
