--- a/app/addons/nginx/config.json
+++ b/app/addons/nginx/config.json
@@ -7,8 +7,8 @@
     { "mod": "damiandennis/pp-nginx", "tag": "a09be7bd607582bf2e53e93ec9b2f628c1ed2f07" }
   ],
   "data": {
-    "nginx": false,
-    "nginx_options": {
+    "install": false,
+    "options": {
       "sites": [
         {
           "site_name": "",
