--- a/app/addons/php/config.json
+++ b/app/addons/php/config.json
@@ -9,8 +9,8 @@
     { "mod": "tPl0ch/puppet-composer", "tag": "1.3.6" }
   ],
   "data": {
-    "php": true,
-    "php_options": {
+    "install": true,
+    "options": {
       "version": "5.5",
       "composer": true,
       "composer_options": {
