fixed bug in creation of project. did more work on the firewall module. added better support for nfs.

--- a/app/addons/firewall/config.json
+++ b/app/addons/firewall/config.json
@@ -7,5 +7,19 @@
   "modules": [
     { "mod": "puppetlabs/puppetlabs-firewall", "tag": "1.7.0" }
   ],
-  "data" : {}
+  "data" : {
+    "install": true,
+    "options": {
+      "rules": [
+        {
+          "ports": [22],
+          "priority": 1,
+          "tcp": true,
+          "udp": true,
+          "icmp": true,
+          "action": "accept"
+        }
+      ]
+    }
+  }
 }
