--- a/app/addons/apache/config.json
+++ b/app/addons/apache/config.json
@@ -5,8 +5,12 @@
   "priority": 5,
   "modules": [
     {
+      "mod": "puppetlabs/puppetlabs-concat",
+      "tag": "1.2.4"
+    },
+    {
       "mod": "puppetlabs/puppetlabs-apache",
-      "tag": "1.5.0"
+      "tag": "1.6.0"
     }
   ],
   "data": {
