--- a/app/addons/nginx/config.json
+++ b/app/addons/nginx/config.json
@@ -4,7 +4,7 @@
   "type": "Web Server",
   "priority": 5,
   "modules": [
-    { "mod": "damiandennis/pp-nginx", "tag": "a09be7bd607582bf2e53e93ec9b2f628c1ed2f07" }
+    { "mod": "damiandennis/pp-nginx", "tag": "3.3.0" }
   ],
   "data": {
     "install": false,
