changed sections to return constructors instead of singletons. changed defaults to be false for all modules except the default of local.

--- a/app/addons/apache/config.json
+++ b/app/addons/apache/config.json
@@ -14,7 +14,7 @@
     }
   ],
   "data": {
-    "install": true,
+    "install": false,
     "options": {
       "mpm": "event",
       "modules": [],
