--- a/app/addons/mysql/config.json
+++ b/app/addons/mysql/config.json
@@ -7,7 +7,7 @@
     { "mod": "puppetlabs/puppetlabs-mysql", "tag": "3.3.0" }
   ],
   "data": {
-    "install": true,
+    "install": false,
     "options": {
       "version": "5.5",
       "root_password": "",
