--- a/app/addons/php/config.json
+++ b/app/addons/php/config.json
@@ -9,7 +9,7 @@
     { "mod": "tPl0ch/puppet-composer", "tag": "1.3.6" }
   ],
   "data": {
-    "install": true,
+    "install": false,
     "options": {
       "version": "5.5",
       "composer": true,
