got tests working with durandal. more work on restructure.

--- a/app/addons/aws/config.json
+++ b/app/addons/aws/config.json
@@ -1,6 +1,6 @@
 {
-  "name": "do",
-  "title": "Digital Ocean",
+  "name": "aws",
+  "title": "Amazon EC2",
   "type": "Target",
   "priority": 2,
   "data": {
