added custom components to make creating addons simplier.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "durandal": "^2.1.0",
     "font-awesome": "^4.4.0",
     "handlebars": "~3.0.3",
+    "install": "^0.2.6",
     "jquery": "^2.1.4",
     "jquery-ui-bundle": "^1.11.4",
     "knockout": "^3.3.0",
@@ -34,9 +35,10 @@
     "knockout-postbox": "~0.5.1",
     "knockout.mapping": "~2.4.3",
     "knockout.validation": "~2.0.2",
-    "lodash": "~3.8.0",
+    "lodash": "^3.8.0",
     "ncp": "~2.0.0",
     "q": "~1.3.0",
+    "require-css": "^0.1.8",
     "requirejs-text": "^2.0.12",
     "rimraf": "^2.4.0",
     "select2": "~3.5.2-browserify",
